tests/e2e/macros/procedural/snforge/snapshots/e2e__macros__procedural__snforge__unit_test_with_assert_macro.snap
---
source: tests/e2e/macros/procedural/snforge/mod.rs
description: "// → test_package/Scarb.toml\n[package]\nname = \"test_package\"\nversion = \"0.1.0\"\nedition = \"2025_12\"\n\n[tool.scarb]\nallow-prebuilt-plugins = [\"snforge_scarb_plugin\"]\n\n[dev-dependencies]\nassert_macros = \"2.10.0\"\nsnforge_std = \"0.60.0\"\nsnforge_scarb_plugin = \"0.60.0\"\n\n// → test_package/src/lib.cairo\n#[cfg(test)]\nmod tests {\n    #[test]\n    fn test_nothing() {\n        assert_eq!(1, 1, \"Who knows\");\n    }\n}"
expression: report
---
[[expansions]]
analyzed_lines = """
    #[test]<caret>
"""
generated_code = """
#[implicit_precedence(
    core::pedersen::Pedersen,
    core::RangeCheck,
    core::integer::Bitwise,
    core::ec::EcOp,
    core::poseidon::Poseidon,
    core::SegmentArena,
    core::circuit::RangeCheck96,
    core::circuit::AddMod,
    core::circuit::MulMod,
    core::gas::GasBuiltin,
    System,
)]
#[snforge_internal_test_executable]
fn test_nothing__snforge_internal_test_generated(mut _data: Span<felt252>) -> Span<felt252> {
    core::internal::require_implicit::<System>();
    core::internal::revoke_ap_tracking();
    core::option::OptionTraitImpl::expect(core::gas::withdraw_gas(), 'Out of gas');
    core::option::OptionTraitImpl::expect(
        core::gas::withdraw_gas_all(core::gas::get_builtin_costs()), 'Out of gas',
    );
    test_nothing();
    let mut arr = ArrayTrait::new();
    core::array::ArrayTrait::span(@arr)
}
fn test_nothing() {
    if snforge_std::_internals::is_config_run() {
        return;
    }
    {
        let __lhs_value_for_assert_eq_macro__ = @(1);
        let __rhs_value_for_assert_eq_macro__ = @(1);
        if !core::traits::PartialEq::eq(
            __lhs_value_for_assert_eq_macro__, __rhs_value_for_assert_eq_macro__,
        ) {
            let mut __formatter_for_assert_eq_macro_: core::fmt::Formatter =
                core::traits::Default::default();
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                {
                    core::byte_array::ByteArrayTrait::append_word(
                        ref __formatter_for_assert_eq_macro_.buffer,
                        0x617373657274696f6e206031203d3d203160206661696c6564,
                        25,
                    );
                    core::result::Result::<(), core::fmt::Error>::Ok(())
                },
            );
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                {
                    core::byte_array::ByteArrayTrait::append_word(
                        ref __formatter_for_assert_eq_macro_.buffer, 0x3a20, 2,
                    );
                    core::result::Result::<(), core::fmt::Error>::Ok(())
                },
            );
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                {
                    core::byte_array::ByteArrayTrait::append_word(
                        ref __formatter_for_assert_eq_macro_.buffer, 0x57686f206b6e6f77730a, 10,
                    );
                    core::result::Result::<(), core::fmt::Error>::Ok(())
                },
            );
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                {
                    core::byte_array::ByteArrayTrait::append_word(
                        ref __formatter_for_assert_eq_macro_.buffer, 0x313a20, 3,
                    );
                    core::result::Result::<(), core::fmt::Error>::Ok(())
                },
            );
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                core::fmt::Debug::fmt(
                    __lhs_value_for_assert_eq_macro__, ref __formatter_for_assert_eq_macro_,
                ),
            );
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                {
                    core::byte_array::ByteArrayTrait::append_word(
                        ref __formatter_for_assert_eq_macro_.buffer, 0xa313a20, 4,
                    );
                    core::result::Result::<(), core::fmt::Error>::Ok(())
                },
            );
            core::result::ResultTrait::<
                (), core::fmt::Error,
            >::unwrap(
                core::fmt::Debug::fmt(
                    __rhs_value_for_assert_eq_macro__, ref __formatter_for_assert_eq_macro_,
                ),
            );
            core::panics::panic_with_byte_array(@__formatter_for_assert_eq_macro_.buffer)
        }
    };
}
"""

[[expansions]]
analyzed_lines = """
        <caret>assert_eq!(1, 1, "Who knows");
"""
generated_code = """
// ==================================================================
// This expansion was done out of context.
// It may be inaccurate — consider expanding the surrounding function
// for more reliable results.
// ==================================================================


{
    let __lhs_value_for_assert_eq_macro__ = @(1);
    let __rhs_value_for_assert_eq_macro__ = @(1);
    if !core::traits::PartialEq::eq(
        __lhs_value_for_assert_eq_macro__, __rhs_value_for_assert_eq_macro__,
    ) {
        let mut __formatter_for_assert_eq_macro_: core::fmt::Formatter =
            core::traits::Default::default();
        core::result::ResultTrait::<
            (), core::fmt::Error,
        >::unwrap(
            {
                core::byte_array::ByteArrayTrait::append_word(
                    ref __formatter_for_assert_eq_macro_.buffer,
                    0x617373657274696f6e206031203d3d203160206661696c6564,
                    25,
                );
                core::result::Result::<(), core::fmt::Error>::Ok(())
            },
        );
        core::result::ResultTrait::<
            (), core::fmt::Error,
        >::unwrap(
            {
                core::byte_array::ByteArrayTrait::append_word(
                    ref __formatter_for_assert_eq_macro_.buffer, 0x3a20, 2,
                );
                core::result::Result::<(), core::fmt::Error>::Ok(())
            },
        );
        core::result::ResultTrait::<
            (), core::fmt::Error,
        >::unwrap(
            {
                core::byte_array::ByteArrayTrait::append_word(
                    ref __formatter_for_assert_eq_macro_.buffer, 0x57686f206b6e6f77730a, 10,
                );
                core::result::Result::<(), core::fmt::Error>::Ok(())
            },
        );
        core::result::ResultTrait::<
            (), core::fmt::Error,
        >::unwrap(
            {
                core::byte_array::ByteArrayTrait::append_word(
                    ref __formatter_for_assert_eq_macro_.buffer, 0x313a20, 3,
                );
                core::result::Result::<(), core::fmt::Error>::Ok(())
            },
        );
        core::result::ResultTrait::<
            (), core::fmt::Error,
        >::unwrap(
            core::fmt::Debug::fmt(
                __lhs_value_for_assert_eq_macro__, ref __formatter_for_assert_eq_macro_,
            ),
        );
        core::result::ResultTrait::<
            (), core::fmt::Error,
        >::unwrap(
            {
                core::byte_array::ByteArrayTrait::append_word(
                    ref __formatter_for_assert_eq_macro_.buffer, 0xa313a20, 4,
                );
                core::result::Result::<(), core::fmt::Error>::Ok(())
            },
        );
        core::result::ResultTrait::<
            (), core::fmt::Error,
        >::unwrap(
            core::fmt::Debug::fmt(
                __rhs_value_for_assert_eq_macro__, ref __formatter_for_assert_eq_macro_,
            ),
        );
        core::panics::panic_with_byte_array(@__formatter_for_assert_eq_macro_.buffer)
    }
}
"""
